feat: Initialize core application structure with player, team, and admin dashboards, authentication flows, statistics, and ranking pages, alongside database migrations.

--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>a550de06-abc4-449e-9ec6-67da319955d2</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>ScrimHub - The Ultimate Esports Platform</title>
+    <meta name="description" content="ScrimHub - The Ultimate Esports Platform" />
+    <meta name="author" content="ScrimHub" />
 
-    <meta property="og:title" content="a550de06-abc4-449e-9ec6-67da319955d2" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="ScrimHub" />
+    <meta property="og:description" content="ScrimHub - The Ultimate Esports Platform" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="ScrimHub" />
+    <meta name="twitter:description" content="ScrimHub - The Ultimate Esports Platform" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
